Uncomment default section

--- a/990-dualmonitor.conf
+++ b/990-dualmonitor.conf
@@ -1,10 +1,10 @@
-#Section "Device"
-#        Identifier      "Allwinner A10/A13 FBDEV"
-#        Driver          "fbturbo"
-#        Option          "fbdev" "/dev/fb0"
-#
-#        Option          "SwapbuffersWait" "true"
-#EndSection
+Section "Device"
+        Identifier      "Allwinner A10/A13 FBDEV"
+        Driver          "fbturbo"
+        Option          "fbdev" "/dev/fb0"
+
+        Option          "SwapbuffersWait" "true"
+EndSection
 
 Section "Device"
         Identifier      "IT8951"
