support ED133UT2 (13.3 inch)
for ED133UT2
- 1600 x 1200
- 90 degree rotation

Signed-off-by: Donghoon Yu <hoony9845@gmail.com>

--- a/rpi-it8951-overlay.dts
+++ b/rpi-it8951-overlay.dts
@@ -49,9 +49,12 @@
 				reg = <0>;
 				spi-max-frequency = <24000000>;
 
-				rotation = <0>;
+				rotation = <90>;
 				reset-gpios = <&gpio 17 0>;
 				hrdy-gpios = <&gpio 24 0>;
+
+				xres = <1600>;
+				yres = <1200>;
 			};
 		};
 	};
